--- a/src/Components/Miscellaneous/BlogPostCardSM/BlogPostCardSM.module.css
+++ b/src/Components/Miscellaneous/BlogPostCardSM/BlogPostCardSM.module.css
@@ -31,12 +31,14 @@
     letter-spacing: 0.01em;
 }
 
-.postedOn{
+.blogTitle{
+    color: var(--black);
     font-family: 'Outfit', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 600;
     line-height: 1.2em;
     letter-spacing: 0.01em;
+    text-decoration: none;
 }
 
 .btn{
