--- a/src/Components/Miscellaneous/GroupCardSM/GroupCardSM.module.css
+++ b/src/Components/Miscellaneous/GroupCardSM/GroupCardSM.module.css
@@ -35,7 +35,9 @@
     letter-spacing: 0.01em;
 }
 
-.postedOn{
+.groupName{
+    color: var(--black);
+    text-decoration: none;
     font-family: 'Outfit', sans-serif;
     font-size: 1.4rem;
     font-weight: 400;
