--- a/src/Components/Miscellaneous/ProfileCardSM/ProfileCardSM.module.css
+++ b/src/Components/Miscellaneous/ProfileCardSM/ProfileCardSM.module.css
@@ -27,11 +27,13 @@
 }
 
 .userName{
+    color: var(--black);
     font-family: 'Outfit', sans-serif;
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.2em;
     letter-spacing: 0.01em;
+    text-decoration: none;
 }
 
 .postedOn{
